// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login should render 1`] = `
"<div>
  <header></header>
  <div class=\\"father\\">
    <div class=\\"divChild\\">
      <section class=\\"contenedor\\"><img src=\\"sweatshirt.png\\" alt=\\"Logo\\" id=\\"logo\\"></section>
      <h1 class=\\"title\\">Trueque</h1>
      <p class=\\"subtitle\\">La comunidad mas grande <br>
      de intercambio de ropa</p>
      <div id=\\"divError\\">
        <p id=\\"errorMessage\\"></p>
      </div>
    </div>
    <main>
    <form method=\\"POST\\" id=\\"formulario\\">
      <input type=\\"email\\" id=\\"userEmail\\" placeholder=\\"alguien@example.com\\" required=\\"required\\">
      <input type=\\"password\\" id=\\"userPassword\\" placeholder=\\"Contraseña\\" required=\\"required\\">
      <button id=\\"login\\">Inicia Sesion</button>
      <button id=\\"googleLogin\\">Iniciar Sesion con Google</button>
      <p class=\\"frase\\">¿No tienes una cuenta?</p>
      <a href=\\"\\" id=\\"registro\\">Registrate</a>
    </form>
    </main>
  </div></div>"
`;

exports[`Register should render 1`] = `
"<div>
  <header></header>
  <div class=\\"father\\">
    <div class=\\"divChild\\">
      <section><img src=\\"sweatshirt.png\\" alt=\\"Logo\\" id=\\"logo\\"></section>
      <h1 class=\\"title\\">Trueque</h1>
      <p class=\\"subtitle\\">La comunidad mas grande <br>
      de intercambio de ropa</p>
      <div id=\\"divError\\">
        <p id=\\"errorMessage\\"></p>
      </div>
    </div>
    <main>
    <form method=\\"POST\\" id=\\"formulario\\">
      <input type=\\"email\\" id=\\"userEmail\\" placeholder=\\"alguien@example.com\\" required=\\"required\\">
      <input type=\\"password\\" id=\\"userPassword\\" placeholder=\\"Contraseña\\" required=\\"required\\">
      <button id=\\"registro\\">Registrate</button>
      <p class=\\"frase\\">¿Tienes una cuenta? </p>
      <a href=\\"\\" id=\\"login\\">Inicia Sesion</a>
    </form>
    </main>
  <div></div></div></div>"
`;
